--- a/style.css
+++ b/style.css
@@ -70,14 +70,9 @@ button#dontForgive:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
-}
-
-.hidden {
-  display: none;
 }
 
 .popup-content {
@@ -109,4 +104,8 @@ button#dontForgive:hover {
 
 .popup-buttons button:hover {
   background-color: #0056b3;
+}
+
+.hidden {
+  display: none; /* Utility class to hide elements */
 }
